--- a/Calendar/index.html
+++ b/Calendar/index.html
@@ -68,7 +68,7 @@ body {
 
 <div style="padding:16px">
 <h1>Calendar</h1>
-<p>Calendar is a services provided by Software and Website Developer Team in Software and Website Developer Team Web App. You could add a calculator to your site for free with Software and Website Developer Team Calendar. </p>
+<p>Calendar is a services provided by Software and Website Developer Team in Software and Website Developer Team Web App. You could add a calendar to your site for free with Software and Website Developer Team Calendar. </p>
 
 <p>In order to set up Calendar on your website, please insert all of this codes in your websites. This codes is needed to be copied on your site through so it could work.</p>
 
