--- a/Code Editor/index.html
+++ b/Code Editor/index.html
@@ -68,7 +68,7 @@ body {
 
 <div style="padding:16px">
 <h1>Code Editor</h1>
-<p>Code Editor is a services provided by Software and Website Developer Team in Software and Website Developer Team Web App. You could add a code editor to your site for free with Software and Website Developer Team Code Editor so your users could edit their codes on your website.. </p>
+<p>Code Editor is a services provided by Software and Website Developer Team in Software and Website Developer Team Web App. You could add a code editor to your site for free with Software and Website Developer Team Code Editor so your users could edit their codes on your website.</p>
 
 <p>In order to set up Code Editor on your website, please insert all of this codes in your websites. This codes is needed to be copied on your site through so it could work.</p>
 
