--- a/Map/code.html
+++ b/Map/code.html
@@ -1,6 +1,6 @@
 <div id="map"></div>
 	<script>
-		mapboxgl.accessToken = '5ae2e3f221c38a28845f05b62416f3ebedf79f3177cb459fd047dc90';
+		mapboxgl.accessToken = 'pk.eyJ1IjoianN0dGFuIiwiYSI6ImNsM3BoNTRsNDBxdXAzZHMxa2NiNjF2YmwifQ.FBBYocnaD0xhGvtn4ygsNg';
     const map = new mapboxgl.Map({
         style: 'mapbox://styles/mapbox/light-v10',
         center: [-74.0066, 40.7135],
