--- a/Notes/src.html
+++ b/Notes/src.html
@@ -1,1 +1,4 @@
-
+<link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="https://software-and-website-developer-team.github.io/API/Notes/style.css">
+<script src="https://software-and-website-developer-team.github.io/API/Notes/script.js"></script>
