--- a/Photo Editor/code.html
+++ b/Photo Editor/code.html
@@ -50,3 +50,63 @@
    <div class="img-container">
      <img id="foto-image" class="image"/>
     </div>
+<script src="https://rawcdn.githack.com/kousik19/foto.js/045defe1a5ce06220e084e4e6f6fbaccb7621841/foto.min.js"></script>
+<script>
+var foto;
+window.onload = function() {
+  foto = new Foto();
+}
+
+function selectImage() {
+  document.getElementById('foto-file').click();
+}
+
+function grayscale(){
+  foto.grayscale();
+}
+
+function bright(){
+  foto.makeBright();
+}
+
+function dark(){
+  foto.makeDark();
+}
+
+function blur_effect() {
+  foto.applyBlurFilter();
+}
+
+function emboss() {
+  foto.applyEmbossFilter();
+}
+
+function sharp() {
+  foto.applySharpFilter();
+}
+
+function download(){
+  foto.export();
+}
+
+function flip_img(){
+  foto.flipVertically();
+}
+
+function crop(){
+  foto.cropSelected();
+}
+
+function makeTransparent(){
+  foto.makeTransparent();
+}
+
+function openColorPicker(){
+  document.getElementById("colorize-color-picker").click();
+}
+
+function makeColorize(elem){
+  var color = elem.value;
+  foto.applyColorFilter(color);
+}
+</script>
