--- a/QR Code Generator/src.html
+++ b/QR Code Generator/src.html
@@ -1,1 +1,3 @@
-
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="https://software-and-website-developer-team.github.io/API/QR Code Generator/style.css">
+<script src="https://software-and-website-developer-team.github.io/API/QR Code Generator/script.js"></script>
