--- a/QR Code Generator/code.html
+++ b/QR Code Generator/code.html
@@ -1,1 +1,15 @@
-
+<div style="padding: 0 10px;min-height: 100vh;align-items: center;justify-content:center;"> 
+<div class="wrapper">
+    <header>
+      <h1>QR Code Generator</h1>
+      <p>Paste a url or enter text to create QR code</p>
+    </header>
+    <div class="form">
+      <input type="text" spellcheck="false" placeholder="Enter text or url">
+      <button>Generate QR Code</button>
+    </div>
+    <div class="qr-code">
+      <img src="" alt="qr-code">
+    </div>
+  </div>
+  </div>
