--- a/QR Code Generator/code.html
+++ b/QR Code Generator/code.html
@@ -13,3 +13,4 @@
     </div>
   </div>
   </div>
+<script src="https://software-and-website-developer-team.github.io/API/QR Code Generator/script.js"></script>
