--- a/QR Code Reader/code.html
+++ b/QR Code Reader/code.html
@@ -1,4 +1,4 @@
-    <div class="wrapper">
+        <div class="wrapper">
       <form action="#">
         <input type="file" hidden>
         <img src="#" alt="qr-code">
@@ -15,3 +15,4 @@
         </div>
       </div>
     </div>
+<script src="https://software-and-website-developer-team.github.io/API/QR Code Reader/script.js"></script>
