--- a/Text Editor/code.html
+++ b/Text Editor/code.html
@@ -1,1 +1,4 @@
-
+<div style="color: blue;background-color:white;">
+        <div id="heading" contenteditable="true"></div>
+        <div id="content" contenteditable="true"></div>
+</div>
