--- a/To Do/code.html
+++ b/To Do/code.html
@@ -1,1 +1,14 @@
-
+<div class="wrapper">
+    <div class="task-input">
+      <input type="text" placeholder="Add a new task">
+    </div>
+    <div class="controls">
+      <div class="filters" style="color:yellow;">
+        <span class="active" id="all">All</span>
+        <span id="pending">Pending</span>
+        <span id="completed">Completed</span>
+      </div>
+      <button class="clear-btn">Clear All</button>
+    </div>
+    <ul class="task-box"></ul>
+  </div>
