--- a/To Do/code.html
+++ b/To Do/code.html
@@ -1,4 +1,4 @@
-<div class="wrapper">
+        <div class="wrapper">
     <div class="task-input">
       <input type="text" placeholder="Add a new task">
     </div>
@@ -12,3 +12,4 @@
     </div>
     <ul class="task-box"></ul>
   </div>
+  <script src="https://software-and-website-developer-team.github.io/API/To Do/script.js"></script>
