--- a/Weather/code.html
+++ b/Weather/code.html
@@ -1,4 +1,4 @@
-<section class="top-banner">
+        <section class="top-banner">
   <div class="container">
     <h1 class="heading" style="color:green;">Weather</h1>
     <form>
@@ -12,4 +12,5 @@
   <div class="container">
     <ul class="cities"></ul>
   </div>
-</section>
+  </section>
+  <script src="https://software-and-website-developer-team.github.io/API/Weather/script.js"></script>
