--- a/Whiteboard/code.html
+++ b/Whiteboard/code.html
@@ -1,4 +1,4 @@
-<section class="container">
+        <section class="container">
     <div id="toolbar">
         <label for="stroke">Stroke</label>
         <input id="stroke" name='stroke' type="color">
@@ -10,3 +10,4 @@
         <canvas id="drawing-board"></canvas>
     </div>
 </section>
+<script src="https://software-and-website-developer-team.github.io/API/Whiteboard/script.js"></script>
