--- a/Photo Storage/src.html
+++ b/Photo Storage/src.html
@@ -1,1 +1,3 @@
-
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="https://software-and-website-developer-team.github.io/API/Photo Storage/style.css">
+<script src="https://software-and-website-developer-team.github.io/API/Photo Storage/script.js"></script>
