--- a/Business/index.html
+++ b/Business/index.html
@@ -69,17 +69,17 @@ body {
 
 <div style="padding:16px">
 <h1>Business Search Engine</h1>
-<p>Business Search Engine is a services provided by Software and Website Developer Team in Software and Website Developer Team Web App. You could search for business on Software and Website Developer Team Business Search Engine. </p>
+<p>Business Search Engine is a services provided by One Future Unified Team in One Future Unified Team Web App. You could search for business on One Future Unified Team Business Search Engine. </p>
 
 <p>In order to set up Business Search Engine on your website, please insert all of this codes in your websites. This codes is needed to be copied on your site through so it could work.</p>
 
 <p>Please insert this codes into your <code>head</code> section so it could proceed all the codes needed on our servers. It is require for it to work so do not missed it.</p>
 <div style="text-align:left;">
-<script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2FSoftware-and-Website-Developer-Team%2FAPI%2Fblob%2Fmain%2FBusiness%2Fsrc.html&style=github&showBorder=on&showLineNumbers=on&showCopy=on"></script>
+<script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2FOne-Future-Unified-Team%2FAPI%2Fblob%2Fmain%2FBusiness%2Fsrc.html&style=github&showBorder=on&showLineNumbers=on&showCopy=on"></script>
 </div>
 <p>After that, please insert this HTML codes onto your site that you want the business search engine to appear in, please insert it in the <code>body</code> section ONLY.</p>
 <div style="text-align:left;">
-<script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2FSoftware-and-Website-Developer-Team%2FAPI%2Fblob%2Fmain%2FBusiness%2Fcode.html&style=github&showBorder=on&showLineNumbers=on&showCopy=on"></script>
+<script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2FOne-Future-Unified-Team%2FAPI%2Fblob%2Fmain%2FBusiness%2Fcode.html&style=github&showBorder=on&showLineNumbers=on&showCopy=on"></script>
 </div>
 </div>
 
