--- a/Contact/index.html
+++ b/Contact/index.html
@@ -69,17 +69,17 @@ body {
 
 <div style="padding:16px">
 <h1>Contact</h1>
-<p>Contact is a services provided by Software and Website Developer Team in Software and Website Developer Team Web App. You could add a contact management services to your site for free with Software and Website Developer Team Contact. Users could add a contact information into our services to store it so they could retrieve their friends/customers contact information in the future. It is all stored on your browser local storage so it wouldn't be available to anyone else too.</p>
+<p>Contact is a services provided by One Future Unified Team in One Future Unified Team Web App. You could add a contact management services to your site for free with One Future Unified Team Contact. Users could add a contact information into our services to store it so they could retrieve their friends/customers contact information in the future. It is all stored on your browser local storage so it wouldn't be available to anyone else too.</p>
 
 <p>In order to set up Contact on your website, please insert all of this codes in your websites. This codes is needed to be copied on your site through so it could work.</p>
 
 <p>Please insert this codes into your <code>head</code> section so it could proceed all the codes needed on our servers. It is require for it to work so do not missed it.</p>
 <div style="text-align:left;">
-<script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2FSoftware-and-Website-Developer-Team%2FAPI%2Fblob%2Fmain%2FContact%2Fsrc.html&style=github&showBorder=on&showLineNumbers=on&showCopy=on"></script>
+<script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2FOne-Future-Unified-Team%2FAPI%2Fblob%2Fmain%2FContact%2Fsrc.html&style=github&showBorder=on&showLineNumbers=on&showCopy=on"></script>
 </div>
 <p>After that, please insert this HTML codes onto your site that you want the business search engine to appear in, please insert it in the <code>body</code> section ONLY.</p>
 <div style="text-align:left;">
-<script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2FSoftware-and-Website-Developer-Team%2FAPI%2Fblob%2Fmain%2FContact%2Fcode.html&style=github&showBorder=on&showLineNumbers=on&showCopy=on"></script>
+<script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2FOne-Future-Unified-Team%2FAPI%2Fblob%2Fmain%2FContact%2Fcode.html&style=github&showBorder=on&showLineNumbers=on&showCopy=on"></script>
 </div>
 </div>
 
