--- a/QR Code Generator/index.html
+++ b/QR Code Generator/index.html
@@ -69,15 +69,15 @@ body {
 
 <div style="padding:16px">
 <h1>QR Code Generator</h1>
-<p>QR Code Generator is a services provided by Software and Website Developer Team in Software and Website Developer Team Web App. You could generate QR Code on QR Code Generator. QR Code Generator is supported in our free API too so everyone could use it on their site. </p>
+<p>QR Code Generator is a services provided by One Future Unified Team in One Future Unified Team Web App. You could generate QR Code on QR Code Generator. QR Code Generator is supported in our free API too so everyone could use it on their site. </p>
 <p>In order to set up qr code generator on your website, please insert all of this codes in your websites. This codes is needed to be copied on your site through so it could work.</p>
 <p>Please insert this codes into your <code>head</code> section so it could proceed all the codes needed on our servers. It is require for it to work so do not missed it.</p>
 <div style="text-align:left;">
-<script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2FSoftware-and-Website-Developer-Team%2FAPI%2Fblob%2Fmain%2FQR%2520Code%2520Generator%2Fsrc.html&style=github&showBorder=on&showLineNumbers=on&showCopy=on"></script>
+<script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2FOne-Future-Unified-Team%2FAPI%2Fblob%2Fmain%2FQR%2520Code%2520Generator%2Fsrc.html&style=github&showBorder=on&showLineNumbers=on&showCopy=on"></script>
 </div>
 <p>After that, please insert this HTML codes onto your site that you want the audio recorder to appear in, please insert it in the <code>body</code> section ONLY.</p>
 <div style="text-align:left;">
-<script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2FSoftware-and-Website-Developer-Team%2FAPI%2Fblob%2Fmain%2FQR%2520Code%2520Generator%2Fcode.html&style=github&showBorder=on&showLineNumbers=on&showCopy=on"></script>
+<script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2FOne-Future-Unified-Team%2FAPI%2Fblob%2Fmain%2FQR%2520Code%2520Generator%2Fcode.html&style=github&showBorder=on&showLineNumbers=on&showCopy=on"></script>
 </div>
 </div>
 
