--- a/Stocks/index.html
+++ b/Stocks/index.html
@@ -69,13 +69,13 @@ body {
 
 <div style="padding:16px">
 <h1>Stocks</h1>
-<p>Stocks is a services provided by Software and Website Developer Team in Software and Website Developer Team Web App. You could add a stocks onto your site for free so users could get live stocks information directly on your site. </p>
+<p>Stocks is a services provided by One Future Unified Team in One Future Unified Team Web App. You could add a stocks onto your site for free so users could get live stocks information directly on your site. </p>
 
 <p>In order to set up stocks on your website, please insert all of this codes in your websites. This codes is needed to be copied on your site through so it could work.</p>
 
 <p>Please insert this HTML codes onto your site that you want the audio recorder to appear in, please insert it in the <code>body</code> section ONLY.</p>
 <div style="text-align:left;">
-<script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2FSoftware-and-Website-Developer-Team%2FAPI%2Fblob%2Fmain%2FStocks%2Fcode.html&style=github&showBorder=on&showLineNumbers=on&showCopy=on"></script>
+<script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2FOne-Future-Unified-Team%2FAPI%2Fblob%2Fmain%2FStocks%2Fcode.html&style=github&showBorder=on&showLineNumbers=on&showCopy=on"></script>
 </div>
 </div>
 
