--- a/about.html
+++ b/about.html
@@ -66,9 +66,9 @@ body {
 
 <div style="padding:16px;color:green;text-align:center;">
 <h1>About</h1>
-<p>Software and Website Developer Team provided a tons of services in our software and websites like in Software and Website Developer Team Store and Software and Website Developer Team App. Software and Website Developer Team API provide support for all developer to implement Software and Website Developer Team services onto your website without developing the features itself and for free. </p>
-<h2>About Software and Website Developer Team</h2>
-<p>Software and Website Developer Team is a small team based in Malaysia. Software and Website Developer Team is focused in website and software. Software and Website Developer Team mission is to built a place where users doesn't needed to worry about their privacy for free with no ads and to let everyone to have a presence on the internet for a fraction of the price from others. Software and Website Developer Team is founded from a group of young friends with an interest in technology, founded by Jst Tan.</p>
+<p>One Future Unified Team provided a tons of services in our software and websites like in One Future Unified Team Store and One Future Unified Team App. One Future Unified Team API provide support for all developer to implement One Future Unified Team services onto your website without developing the features itself and for free. </p>
+<h2>About One Future Unified Team</h2>
+<p>One Future Unified Team is a small team based in Malaysia. One Future Unified Team is focused in many stuff, from web development to story writing to web development. One Future Unified Team mission is to built a place where users doesn't needed to worry about their privacy for free with no ads and to let everyone to have a presence on the internet for a fraction of the price from others. One Future Unified Team is founded from a group of young friends with an interest in technology, founded by Jst Tan.</p>
 </div>
 
 <script>
