--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@ body {
 <h3>Welcome to API Home!</h3>
 <hr>
 <h2>About Us</h2>
-<p>Software and Website Developer Team API is an Application Programming Interface of Software and Website Developer Team. Users could use Software and Website Developer Team API to implement services built and provide by Software and Website Developer Team on their website for free without developing it. </p>
+<p>One Future Unified Team API is an Application Programming Interface of One Future Unified Team. Users could use One Future Unified Team API to implement services built and provide by One Future Unified Team on their website for free without developing it. </p>
 <hr>
 <h2>Open Source</h2>
-<p>Software and Website Developer Team API is an open source API ( Application Programming Interface ). Everyone could view, read and study all of Software and Website Developer Team API source codes on our official Github repository. Software and Website Developer Team API is built using HTML, CSS and vanilla JavaScript unlike any traditional API too.</p>
+<p>One Future Unified Team API is an open source API ( Application Programming Interface ). Everyone could view, read and study all of One Future Unified Team API source codes on our official Github repository. One Future Unified Team API is built using HTML, CSS and vanilla JavaScript unlike any traditional API too.</p>
 <hr>
 <h2>Free</h2>
-<p>Software and Website Developer Team API is free for everyone to use and enjoy. Everyone could use Software and Website Developer Team API to implement services provided by Software and Website Developer Team for free with no hidden fees. Software and Website Developer Team API is built for everyone to use and not for earning money from developers and website owner.</p>
+<p>One Future Unified Team API is free for everyone to use and enjoy. Everyone could use One Future Unified Team API to implement services provided by One Future Unified Team for free with no hidden fees. One Future Unified Team API is built for everyone to use and not for earning money from developers and website owner.</p>
 </div>
 
 <script>
