--- a/services.html
+++ b/services.html
@@ -66,8 +66,8 @@ body {
 
 <div style="padding:16px;color:green;text-align:center;">
 <h1>Services</h1>
-<p>Software and Website Developer Team provided a tons of services in our software and websites like in Software and Website Developer Team Store and Software and Website Developer Team App. We would list out all services of Software and Website Developer Team in this page with some services supported and some services not supported in Software and Website Developer Team API.</p>
-<p><strong>Here is all of the services provided by Software and Website Developer Team that is supported in Software and Website Developer Team:</strong></p>
+<p>One Future Unified Team provided a tons of services in our software and websites like in One Future Unified Team Store and One Future Unified Team App. We would list out all services of One Future Unified Team in this page with some services supported and some services not supported in One Future Unified Team API.</p>
+<p><strong>Here is all of the services provided by One Future Unified Team that is supported in One Future Unified Team:</strong></p>
 <ul>
   <li>Ads</li>
   <li>Audio Recorder</li>
@@ -95,7 +95,7 @@ body {
   <li>Weather</li>
   <li>Whiteboard</li>
 </ul>
-<p><strong>Here is all of the services provided by Software and Website Developer Team that is not supported in Software and Website Developer Team:</strong></p>
+<p><strong>Here is all of the services provided by One Future Unified Team that is not supported in One Future Unified Team:</strong></p>
 <ul>
   <li>Project</li>
   <li>Website</li>
