--- a/Business/src.html
+++ b/Business/src.html
@@ -1,1 +1,1 @@
-<link rel="stylesheet" href="https://software-and-website-developer-team.github.io/API/Business/style.css">
+<link rel="stylesheet" href="https://one-future-unified-team/API/Business/style.css">
